--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,22 @@ services:
       - "5432:5432"
     volumes:
       - db:/var/lib/postgresql/data
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_CREATE_TOPICS: "hotel-manager:1:1"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 volumes:
   db:
     driver: local
