--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -10,8 +10,8 @@
         <version>3.2.4</version>
     </parent>
 
-    <groupId>hotelmanager</groupId>
-    <artifactId>hotel-manager</artifactId>
+    <groupId>rooms</groupId>
+    <artifactId>rooms</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
